--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -2,7 +2,7 @@
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Jun 01 2024'
-heroImage: '../../assets/ANTOLINEZ1.png'
+heroImage: ../../assets/ANTOLINEZ1.png
 heroAlt: 'A scientist'
 scientist: 'The man who knew infinity'
 tool: 'Touch grass more effectively'
